@@ -10,8 +10,10 @@
     <name>GC14</name>
 
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <sonar.projectKey>david98_ing-sw-2020-riva-valassi-volta</sonar.projectKey>
+        <sonar.organization>david98</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <maven.compiler.release>14</maven.compiler.release>
         <sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
         <sonar.coverage.jacoco.xmlReportPaths>target/jacoco-ut/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <jacoco.version>0.8.5</jacoco.version>
@@ -23,12 +25,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.1</version>
+            <version>[5.6.1, )</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.6.2</version>
+            <version>[5.6.2, )</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -71,9 +73,9 @@
                     <release>14</release>
                     <source>14</source>
                     <target>14</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <!--<compilerArgs>
+                        <arg><-enable-preview</arg>
+                    </compilerArgs>-->
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <parameters>true</parameters>
                 </configuration>
@@ -88,7 +90,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>it.polimi.vovarini.server.Server</mainClass>
+                            <mainClass>it.polimi.vovarini.Application</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
